2012-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	*_mingw_mac.h: Moved CRT secure macros to _mingw_secapi.h
	*_mingw_secapi.h: New, fix fallback cases.

2012-01-11  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_):
	Fix arguments.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_3_): Likewise.

2012-01-11  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES1_):
	rename to __CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_3_.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_4_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_0_2_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT_0_3_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT2_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT_1_4_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY_0_3_.

2012-01-09  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw.h.in: Move @MINGW_HAS_SECURE_API@ before mingw_mac.h.
	(__MINGW_ATTRIB_DEPRECATED_SEC_WARN): Moved to _mingw_mac.h.
	(__MINGW_ATTRIB_DEPRECATED_MSVC2005): Likewise.
	* _mingw_mac.h: (__if_array): New template.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES1_): Define macro.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY1_): Likewise.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES1_): Likewise.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT1_): Likewise.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT2_): Likewise.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY1_): Likewise.

2012-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sec_api/memory_s.h: New.