@@ -16,9 +16,9 @@ extern "C" {
 
 #ifndef _MBSTRING_S_DEFINED
 #define _MBSTRING_S_DEFINED
-  _CRTIMP errno_t __cdecl _mbscat_s(unsigned char *_Dst,size_t _DstSizeInBytes,const unsigned char *_Src);
+  __CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_(errno_t,_mbscat_s,unsigned char,,_Dst,size_t,,_DstSizeInBytes,const unsigned char*,,_Src)
   _CRTIMP errno_t __cdecl _mbscat_s_l(unsigned char *_Dst,size_t _DstSizeInBytes,const unsigned char *_Src,_locale_t _Locale);
-  _CRTIMP errno_t __cdecl _mbscpy_s(unsigned char *_Dst,size_t _DstSizeInBytes,const unsigned char *_Src);
+  __CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_(errno_t,_mbscpy_s,unsigned char,,_Dst,size_t,,_DstSizeInBytes,const unsigned char*,,_Src)
   _CRTIMP errno_t __cdecl _mbscpy_s_l(unsigned char *_Dst,size_t _DstSizeInBytes,const unsigned char *_Src,_locale_t _Locale);
   _CRTIMP errno_t __cdecl _mbslwr_s(unsigned char *_Str,size_t _SizeInBytes);
   _CRTIMP errno_t __cdecl _mbslwr_s_l(unsigned char *_Str,size_t _SizeInBytes,_locale_t _Locale);
